force-app/main/default/objects/MAP_Scorecard__c/MAP_Scorecard__c.object-meta.xml
<CustomObject>
    <label>Additional Scorecard</label>
    <nameField>
        <label>Scorecard Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Additional Scorecards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>