force-app/main/default/objects/MAP_Scorecard__c/fields/About_Abstrakt__c.field-meta.xml
<CustomField>
    <fullName>About_Abstrakt__c</fullName>
    <inlineHelpText>Internal SDR and Abstrakt appointment setting process. How we close deals virtually. Discuss a case study.</inlineHelpText>
    <label>About Abstrakt</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Somewhat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>