force-app/main/default/objects/MAP_Scorecard__c/fields/Abstrakt_Non_Negotiables__c.field-meta.xml
<CustomField>
    <fullName>Abstrakt_Non_Negotiables__c</fullName>
    <inlineHelpText>PSR Treatment, Payment Expectations, Equal Opportunity Employer</inlineHelpText>
    <label>Abstrakt Non-Negotiables</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Somewhat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>