force-app/main/default/objects/MAP_Scorecard__c/fields/Abstrakt_Timeline_of_Expectations__c.field-meta.xml
<CustomField>
    <fullName>Abstrakt_Timeline_of_Expectations__c</fullName>
    <inlineHelpText>Realistic deliverables, expectations and what they want to accomplish together</inlineHelpText>
    <label>Abstrakt Timeline of Expectations</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Somewhat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>