force-app/main/default/objects/MAP_Scorecard__c/fields/Account_Details__c.field-meta.xml
<CustomField>
    <fullName>Account_Details__c</fullName>
    <description>Used to score Sapper Consulting wrap up calls.</description>
    <label>Account Details</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Maybe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>