force-app/main/default/objects/MAP_Scorecard__c/fields/Accuracy__c.field-meta.xml
<CustomField>
    <fullName>Accuracy__c</fullName>
    <description>Used to score copywriter on Content Scorecard</description>
    <inlineHelpText>COPYWRITERS / STRATEGISTS: Are there &apos;hard&apos; edits that need to be made? Are there grammar, spacing, spelling, or punctuation errors?___________________________________________________________EDITORS: Were the overall mistakes caught?</inlineHelpText>
    <label>Accuracy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>