force-app/main/default/objects/MAP_Scorecard__c/fields/Accuracy_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Accuracy_Feedback__c</fullName>
    <label>Accuracy Feedback</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>