force-app/main/default/objects/MAP_Scorecard__c/fields/Accuracy_Score__c.field-meta.xml
<CustomField>
    <fullName>Accuracy_Score__c</fullName>
    <description>Used on Implementation Project Manager quality score.</description>
    <inlineHelpText>Is the information that needs to be there present? Fields, attachments, links, etc.</inlineHelpText>
    <label>Accuracy Score</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>