force-app/main/default/objects/MAP_Scorecard__c/fields/Accuracy_Variance__c.field-meta.xml
<CustomField>
    <fullName>Accuracy_Variance__c</fullName>
    <description>Used on the Content Variance scorecard</description>
    <inlineHelpText>COPYWRITERS: Are there &apos;hard&apos; edits that need to be made? Are there grammar, spacing, spelling, or punctuation errors?________________________________________EDITORS: Were the overall mistakes caught?</inlineHelpText>
    <label>Accuracy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
                <isActive>false</isActive>
                <label>NA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>