force-app/main/default/objects/MAP_Scorecard__c/fields/Accuracy_Variance_Score__c.field-meta.xml
<CustomField>
    <fullName>Accuracy_Variance_Score__c</fullName>
    <description>Content accuracy variance score.</description>
    <label>Accuracy Variance Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>