force-app/main/default/objects/MAP_Scorecard__c/fields/Action_Items_Notes__c.field-meta.xml
<CustomField>
    <fullName>Action_Items_Notes__c</fullName>
    <label>Action Items Notes</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>