force-app/main/default/objects/MAP_Scorecard__c/fields/Action_Items_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>Action_Items_Outstanding__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Managers checks box to indicate action items are outstanding. Employee unchecks box when action items are complete.</description>
    <inlineHelpText>Managers checks box to indicate action items are outstanding. Employee unchecks box when action items are complete.</inlineHelpText>
    <label>Action Items Outstanding</label>
    <type>Checkbox</type>
</CustomField>