force-app/main/default/objects/MAP_Scorecard__c/fields/Action_Name__c.field-meta.xml
<CustomField>
    <fullName>Action_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Action Name</label>
    <referenceTo>amc__Action__c</referenceTo>
    <relationshipName>MAP_Scorecards</relationshipName>
    <type>Lookup</type>
</CustomField>