force-app/main/default/objects/MAP_Scorecard__c/fields/Action_Needed__c.field-meta.xml
<CustomField>
    <fullName>Action_Needed__c</fullName>
    <description>Used in Bionic Inbox Audit</description>
    <label>Action Needed</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>