force-app/main/default/objects/MAP_Scorecard__c/fields/Activities_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Activities_Feedback__c</fullName>
    <description>Used to score Sapper MRM</description>
    <label>Activities Feedback</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>