force-app/main/default/objects/MAP_Scorecard__c/fields/Additional_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Additional_Feedback__c</fullName>
    <label>Additional Feedback</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>