force-app/main/default/objects/MAP_Scorecard__c/fields/Agenda_Notes__c.field-meta.xml
<CustomField>
    <fullName>Agenda_Notes__c</fullName>
    <label>Agenda Notes</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>