force-app/main/default/objects/MAP_Scorecard__c/fields/Agreement_qualifier_reviewed_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Agreement_qualifier_reviewed_Feedback__c</fullName>
    <description>Used on implementation call quality scorecard</description>
    <label>Agreement/qualifier reviewed Feedback</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>