force-app/main/default/objects/MAP_Scorecard__c/fields/AMC_Project__c.field-meta.xml
<CustomField>
    <fullName>AMC_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AMC Project</label>
    <referenceTo>amc__Project__c</referenceTo>
    <relationshipLabel>Additional Scorecards</relationshipLabel>
    <relationshipName>Additional_Scorecards</relationshipName>
    <type>Lookup</type>
</CustomField>