force-app/main/default/objects/MAP_Scorecard__c/fields/Announcements_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Announcements_Feedback__c</fullName>
    <label>Announcements Feedback</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>