force-app/main/default/objects/MAP_Scorecard__c/fields/Appointment_Deficit_Duties_Complete__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Deficit_Duties_Complete__c</fullName>
    <description>Used for Partner Operations Analyst Account Management Score</description>
    <inlineHelpText>Completed by last day of the previous month 
•	Working for Free Accounts
•	Contracts ending within the next 2 months w/ an Appt Deficit of 3 or greater
•	Append Logs summarize the meeting notes and tasks completed
•	A meeting is logged for each week</inlineHelpText>
    <label>5. Appointment Deficit Duties Complete</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <isActive>false</isActive>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
                <isActive>false</isActive>
                <label>Yes</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>