force-app/main/default/objects/MAP_Scorecard__c/fields/Appointment_Owner__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used on Sapper Appointment Scorecard</description>
    <label>Appointment Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Additional_Scorecards2E4Y</relationshipName>
    <type>Lookup</type>
</CustomField>