force-app/main/default/objects/MAP_Scorecard__c/fields/Appropriate_Use_of_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>Appropriate_Use_of_Hierarchy__c</fullName>
    <inlineHelpText>Are design principle best practices met or exceeded?</inlineHelpText>
    <label>Design Principles</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>