force-app/main/default/objects/MAP_Scorecard__c/fields/Approval__c.field-meta.xml
<CustomField>
    <fullName>Approval__c</fullName>
    <description>Used for Website Implementation Scorecard</description>
    <inlineHelpText>Did they ask for final approval either during the Progress or Wrap-Up call to ensure they are on the same page with the client?</inlineHelpText>
    <label>Approval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>