force-app/main/default/objects/MAP_Scorecard__c/fields/AR__c.field-meta.xml
<CustomField>
    <fullName>AR__c</fullName>
    <description>Used on Partner Meeting and VMM Scorecards.</description>
    <inlineHelpText>Thanked them for paying on time, resolved AR, found a solution for the future</inlineHelpText>
    <label>Investment Protection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Somewhat</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
                <isActive>false</isActive>
                <label>NA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>