force-app/main/default/objects/MAP_Scorecard__c/fields/AR_Feedback__c.field-meta.xml
<CustomField>
    <fullName>AR_Feedback__c</fullName>
    <label>Investment Protection Feedback</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>