force-app/main/default/objects/MAP_Scorecard__c/fields/Are_all_senders_distributed_correctly__c.field-meta.xml
<CustomField>
    <fullName>Are_all_senders_distributed_correctly__c</fullName>
    <label>Are all senders distributed correctly?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>