force-app/main/default/objects/MAP_Scorecard__c/fields/Are_there_missed_leads_in_the_inbox__c.field-meta.xml
<CustomField>
    <fullName>Are_there_missed_leads_in_the_inbox__c</fullName>
    <label>Are there missed leads in the inbox?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>