force-app/main/default/objects/MAP_Scorecard__c/fields/Asked_CFS__c.field-meta.xml
<CustomField>
    <fullName>Asked_CFS__c</fullName>
    <description>Used for to score how many time the manager marked yes on the field CFS Score on Partner Meeting Scorecards.</description>
    <formula>IF(ISPICKVAL( CFS_Score__c ,&apos;Yes&apos;),TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asked CFS</label>
    <type>Checkbox</type>
</CustomField>