force-app/main/default/objects/MAP_Scorecard__c/fields/Asked_insightful_interesting_questions__c.field-meta.xml
<CustomField>
    <fullName>Asked_insightful_interesting_questions__c</fullName>
    <description>Used on implementation call quality scorecard</description>
    <label>Asked insightful, stimulating questions?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>