force-app/main/default/objects/MAP_Scorecard__c/fields/Attention__c.field-meta.xml
<CustomField>
    <fullName>Attention__c</fullName>
    <inlineHelpText>Does it keep my attention?</inlineHelpText>
    <label>Attention</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0 - Did not meet AMG standards</fullName>
            </value>
            <value>
                <fullName>1 - Met AMG standards</fullName>
            </value>
            <value>
                <fullName>2 - Exceeded AMG standards</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>