force-app/main/default/objects/MAP_Scorecard__c/fields/Audio__c.field-meta.xml
<CustomField>
    <fullName>Audio__c</fullName>
    <inlineHelpText>How is the overall quality of the audio? (VO, Music, SFX)</inlineHelpText>
    <label>Audio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0 - Did not meet AMG standards</fullName>
            </value>
            <value>
                <fullName>1 - Met AMG standards</fullName>
            </value>
            <value>
                <fullName>2 - Exceeded AMG standards</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>