force-app/main/default/objects/MAP_Scorecard__c/fields/Audit_Notes__c.field-meta.xml
<CustomField>
    <fullName>Audit_Notes__c</fullName>
    <description>Used on Sapper Appointment Scorecard</description>
    <label>Audit Notes</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>