force-app/main/default/objects/MAP_Scorecard__c/fields/Audited_By__c.field-meta.xml
<CustomField>
    <fullName>Audited_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Audited By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Additional_Scorecards2_del</relationshipName>
    <type>Lookup</type>
</CustomField>