force-app/main/default/objects/MAP_Scorecard__c/fields/Audited_Date__c.field-meta.xml
<CustomField>
    <fullName>Audited_Date__c</fullName>
    <label>Audited Date</label>
    <type>Date</type>
</CustomField>