force-app/main/default/objects/MAP_Scorecard__c/fields/Behind_the_Scenes_Projects__c.field-meta.xml
<CustomField>
    <fullName>Behind_the_Scenes_Projects__c</fullName>
    <inlineHelpText>Did the manager discuss actions their team are working on for the client?</inlineHelpText>
    <label>Behind the Scenes - Projects</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>