force-app/main/default/objects/MAP_Scorecard__c/fields/Best_Practices__c.field-meta.xml
<CustomField>
    <fullName>Best_Practices__c</fullName>
    <description>Used for Digital/Development and Website Project Manager Case Scorecard</description>
    <inlineHelpText>Did they follow Abstrakt and industry best practices when completing case?</inlineHelpText>
    <label>Best Practices</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>