force-app/main/default/objects/MAP_Scorecard__c/fields/Best_Practices_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Best_Practices_Feedback__c</fullName>
    <label>Best Practices Feedback</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>