force-app/main/default/objects/MAP_Scorecard__c/fields/Bionic_Appointment_Score__c.field-meta.xml
<CustomField>
    <fullName>Bionic_Appointment_Score__c</fullName>
    <formula>(CASE(Prospect_Showed_Interest__c,
&apos;Yes - Email&apos;,1,
&apos;Yes - Phone (SDR)&apos;,1,
&apos;No&apos;,0,
0)+
CASE(Confirmation_Email_Sent__c,
&apos;Yes - Phone (SDR)&apos;,1,
&apos;Yes&apos;,1,
&apos;No&apos;,0,
0)+
CASE (Calendar_Invite_Accepted__c,
&apos;Yes - Confirmed on Phone (SDR)&apos;,1,
&apos;Yes&apos;,1,
&apos;Client Handoff&apos;,1,
&apos;No&apos;,0,
0))/3</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bionic Appointment Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>