force-app/main/default/objects/MAP_Scorecard__c/fields/Bionic_Inbox_Audit_Score__c.field-meta.xml
<CustomField>
    <fullName>Bionic_Inbox_Audit_Score__c</fullName>
    <formula>(CASE( Was_every_email_responded_to__c ,
&quot;Yes&quot;,1,
&quot;No&quot;,0,
0)+
CASE( Were_email_inboxes_in_the_right_folders__c ,
&quot;Yes&quot;,1,
&quot;No&quot;,0,
0)+
CASE( Is_scrumming_schedule_being_followed__c ,
&quot;Yes&quot;,1,
&quot;No&quot;,0,
0)+
CASE( Inbox_has_required_templates_folders__c,
&quot;Yes&quot;,1,
&quot;No&quot;,0,
0)+ 
CASE(Is_the_tech_setup_of_the_inbox_correct__c ,
&quot;Yes&quot;,1,
&quot;No&quot;,0,
0)+ 
CASE(Are_there_missed_leads_in_the_inbox__c ,
&quot;Yes&quot;,0,
&quot;No&quot;,1,
0)+ 
CASE(Have_reschedules_been_followed_up_with__c ,
&quot;Yes&quot;,1,
&quot;No&quot;,0,
0))/7</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bionic Inbox Audit Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>