force-app/main/default/objects/MAP_Scorecard__c/fields/Bionic_Project_Manager_s_Call_Score__c.field-meta.xml
<CustomField>
    <fullName>Bionic_Project_Manager_s_Call_Score__c</fullName>
    <description>Used on the Bionic Implementing Call Scorecard</description>
    <formula>(CASE( Clearly_prep_the_meeting__c ,
&apos;3&apos;,3,
&apos;2&apos;,2,
&apos;1&apos;,1,
0)+
CASE( Set_and_follow_proper_agenda__c ,
&apos;3&apos;,3,
&apos;2&apos;,2,
&apos;1&apos;,1,
0)+
CASE( Were_agreement_qualifier_reviewed__c ,
&apos;3&apos;,3,
&apos;2&apos;,2,
&apos;1&apos;,1,
0)+
CASE( Asked_insightful_interesting_questions__c ,
&apos;3&apos;,3,
&apos;2&apos;,2,
&apos;1&apos;,1,
0)+
CASE( Provided_accurate_guidance_suggestions__c ,
&apos;3&apos;,3,
&apos;2&apos;,2,
&apos;1&apos;,1,
0)+
CASE(Did_the_IPM_bring_up_payment_due_dates__c,
&apos;3&apos;,3,
&apos;2&apos;,2,
&apos;1&apos;,1,
0)+
CASE(Provide_proper_expectations_answers__c ,
&apos;3&apos;,3,
&apos;2&apos;,2,
&apos;1&apos;,1,
0)+
CASE(Keep_tone_and_pace_of_call_appropriate__c ,
&apos;3&apos;,3,
&apos;2&apos;,2,
&apos;1&apos;,1,
0)+
CASE( Discussed_other_services_for_an_upsell__c ,
&apos;3&apos;,3,
&apos;2&apos;,2,
&apos;1&apos;,1,
0)+
CASE( Recap_with_action_items_due_dates__c ,
&apos;3&apos;,3,
&apos;2&apos;,2,
&apos;1&apos;,1,
0)+
CASE( TAM_Accurately_Communicated__c ,
&apos;3&apos;,3,
&apos;2&apos;,2,
&apos;1&apos;,1,
0))/(33-
(CASE( Clearly_prep_the_meeting__c ,
&quot;NA&quot;,3,
0)+
CASE( Set_and_follow_proper_agenda__c ,
&quot;NA&quot;,3,
0)+
CASE( Were_agreement_qualifier_reviewed__c ,
&quot;NA&quot;,3,
0)+
CASE( Asked_insightful_interesting_questions__c ,
&quot;NA&quot;,3,
0)+
CASE( Provided_accurate_guidance_suggestions__c ,
&quot;NA&quot;,3,
0)+
CASE(Did_the_IPM_bring_up_payment_due_dates__c,
&quot;NA&quot;,3,
0)+
CASE(Provide_proper_expectations_answers__c ,
&quot;NA&quot;,3,
0)+
CASE(Keep_tone_and_pace_of_call_appropriate__c ,
&quot;NA&quot;,3,
0)+
CASE( Discussed_other_services_for_an_upsell__c ,
&quot;NA&quot;,3,
0)+
CASE( Recap_with_action_items_due_dates__c ,
&quot;NA&quot;,3,
0)+
CASE( TAM_Accurately_Communicated__c ,
&quot;NA&quot;,3,
0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bionic Project Manager&apos;s Call Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>