force-app/main/default/objects/MAP_Scorecard__c/fields/Blog_Images__c.field-meta.xml
<CustomField>
    <fullName>Blog_Images__c</fullName>
    <description>Digital QA Scorecard: Blog</description>
    <inlineHelpText>Correct featured image is selected, matches the image as it appears on the blog page, and has alt text filled in. “Featured thin” is selected for the correct page image (when applicable).</inlineHelpText>
    <label>Blog Images</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>