force-app/main/default/objects/MAP_Scorecard__c/fields/Blog_Layout__c.field-meta.xml
<CustomField>
    <fullName>Blog_Layout__c</fullName>
    <description>Digital QA Scorecard: Blog</description>
    <inlineHelpText>Did the writer select the right blog template that matches previously uploaded blogs?</inlineHelpText>
    <label>Blog Layout</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>