force-app/main/default/objects/MAP_Scorecard__c/fields/Blog_Layout_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Blog_Layout_Feedback__c</fullName>
    <defaultValue>&quot;Did the writer select the right blog template that matches previously uploaded blogs?&quot;</defaultValue>
    <description>Digital QA Scorecard: Blog</description>
    <label>Blog Layout Feedback</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>