force-app/main/default/objects/MAP_Scorecard__c/fields/Blog_Schedule_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Blog_Schedule_Feedback__c</fullName>
    <defaultValue>&quot;Post is scheduled to go live at an appropriate time and date (best practice: Monday or Thursday between 7 am and 9 am). Is the blog appropriately spaced apart from other recently scheduled blogs?&quot;</defaultValue>
    <description>Digital QA Scorecard: Blog</description>
    <inlineHelpText>Post is scheduled to go live at an appropriate time and date (best practice: Monday or Thursday between 7 am and 9 am). Is the blog appropriately spaced apart from other recently scheduled blogs?</inlineHelpText>
    <label>Blog Schedule Feedback</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>