force-app/main/default/objects/MAP_Scorecard__c/fields/Blog_Template__c.field-meta.xml
<CustomField>
    <fullName>Blog_Template__c</fullName>
    <inlineHelpText>Did the writer use the appropriate blog template that matches previously uploaded blogs?</inlineHelpText>
    <label>Blog Template</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>