force-app/main/default/objects/MAP_Scorecard__c/fields/Build_Maintain_Relationships__c.field-meta.xml
<CustomField>
    <fullName>Build_Maintain_Relationships__c</fullName>
    <label>Build &amp; Maintain Relationships</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Somewhat</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>