force-app/main/default/objects/MAP_Scorecard__c/fields/Build_Maintain_Relationships_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Build_Maintain_Relationships_Feedback__c</fullName>
    <label>Build &amp; Maintain Relationships Feedback</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>